Changed main configuration to have options in a sub menu
Signed-off-by: Aidan Pinard <aidan@aidanpinard.co>

--- a/main/Kconfig
+++ b/main/Kconfig
@@ -1,4 +1,9 @@
+menu "App Main"
+
 config RUN_UNIT_TESTS
 	bool "Run unit tests instead of user_main."
+	default n
 	help
 		"Select this to run Unity Unit Tests instead of user_main."
+
+endmenu
